* @GatherPipe@ no longer locks on looping and is semantically sound for depth-first traversing
* Added @Pipe.enablePath(boolean)@ method to support the turning on/off of path calculations
* Renamed @Pipe.getPath()@ to @Pipe.getCurrentPath()@
* @SideEffectCapPipe@ moved to the @transform@ package as it was wrongly organized in the @sideeffect@ package

h2. Pipes 0.X

!https://github.com/tinkerpop/pipes/raw/master/doc/images/pipes-pipes.png!

h3. Version 1.0 (Pipes -- February 28, 2012)

```xml
<dependency>
  <groupId>com.tinkerpop</groupId>
  <artifactId>pipes</artifactId>
  <version>1.0</version>
</dependency>
```

* Added @SelectPipe@ to select the objects of named steps from a pipeline
* Separated @Row@ from @Table@ so it can be reused by other pipes (e.g. @SelectPipe@)
* Heavily reworked @PipesFluentPipeline@ JavaDoc to make it a single point of reference
* Updated @LoopPipe@ semantics such that if there is an emit function, then the final object in a while isn't returned
* Updated @GroupCountFunctionPipe@ semantics such that the value-function gets a @Pair@ containing incoming object and last value for that object
* Reorganized the @com.tinkerpop.pipes.util@ package
* Removed the @objectFilter@ step from @PipeFluentPipeline@ as @retain@ and @except@ can be used instead
* @EmptyIterator@ is now a singleton
* @ScatterPipe@ now scatters @Map@ objects into @Map.Entry@ streams
* Added @GroupByPipe@ which groups values under a provided key
* Added @GroupByReducePipe@ which groups reduced values under a provided key


==<hr/>==

!https://github.com/tinkerpop/pipes/raw/master/doc/images/pipes-sink-pipe.png!

h3. Version 0.9 (Sink -- December 7, 2011)

```xml
<dependency>
  <groupId>com.tinkerpop</groupId>
  <artifactId>pipes</artifactId>
  <version>0.9</version>
</dependency>
```

* Removed all "Blueprints":http://blueprints.tinkerpop.com graph related dependencies
* Renamed @UniquePathFilterPipe@ to @CyclicPathFilterPipe@